syntax = "proto3";

package shrivenquant.auth.v1;

// Authentication service API
service AuthService {
  // Authenticate user and get token
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // Validate JWT token
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  
  // Refresh token
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  
  // Revoke token
  rpc RevokeToken(RevokeTokenRequest) returns (RevokeTokenResponse);
  
  // Get user permissions
  rpc GetPermissions(GetPermissionsRequest) returns (GetPermissionsResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string exchange = 3; // Optional: specific exchange login
}

message LoginResponse {
  string token = 1;
  string refresh_token = 2;
  int64 expires_at = 3;
  repeated Permission permissions = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  repeated Permission permissions = 3;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string token = 1;
  string refresh_token = 2;
  int64 expires_at = 3;
}

message RevokeTokenRequest {
  string token = 1;
}

message RevokeTokenResponse {
  bool success = 1;
}

message GetPermissionsRequest {
  string user_id = 1;
}

message GetPermissionsResponse {
  repeated Permission permissions = 1;
}

enum Permission {
  PERMISSION_UNSPECIFIED = 0;
  PERMISSION_READ_MARKET_DATA = 1;
  PERMISSION_PLACE_ORDERS = 2;
  PERMISSION_CANCEL_ORDERS = 3;
  PERMISSION_VIEW_POSITIONS = 4;
  PERMISSION_MODIFY_RISK_LIMITS = 5;
  PERMISSION_ADMIN = 6;
}